api/2.api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api.service
  namespace: cloudacademy
  labels:
    app: api.service
    env: demo
spec:
  ports:
   - protocol: TCP
     port: 8080
  selector:
    app: api
