api/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiservice
  labels:
    app: apiservice
spec:
  ports:
   - protocol: TCP
     port: 8080
  selector:
    app: api
