api/3.api.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: cloudacademy
spec:
 rules:
 - host: api.X.X.X.X.nip.io
   http:
     paths:
     - path: /
       backend:
         serviceName: apiservice
         servicePort: 8080
